# vstruct

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecheck.sh
examples/: vstruct_example.cpp  vstruct_example.cpp.autosave  xvstruct_example .cpp  xvstruct_example.cpp
include/: vstruct.h  xvstruct.h
include/vstruct/: accessmethods.h  accessmethods.ipp  indexbase.h  indexbase.ipp  internals.h  itembase.h  itemtypes.h  property.h  vstructbase.h
include/xvstruct/: arraybase.h  internals.h  itembase.h  itemtypes.h  property.h  vstructbase.h  xvstruct_xvstruct.h
py_src/: setup.py
py_src/vstruct/: __init__.py  _classes.py
py_src/vstruct/scripts/: gen_header.py  vstruct_gen_header.py
test/: array_unit_test.cpp  main.cpp  packer_test.cpp  raw_if_test.cpp  test_array.h  test_functions.h  test_suite_base.h  testlib.h  tests.h
test/internal/: test_leorder.cpp  test_packer.cpp
test/types/: test_alignpad.cpp  test_boolarray.cpp  test_boolitem.cpp  test_learray.cpp  test_leitem.cpp  testsuite_types.cpp
